--- a/public_html/index.html
+++ b/public_html/index.html
@@ -51,6 +51,7 @@
           <li><a href="#third">Tumblr</a></li>
           <li><a href="#fourth">Movie</a></li>
           <li><a href="#fifth">Twitter</a></li>
+          <li><a href="#sixth">Detail</a></li>
         </ul>
       </nav>
       <!-- <img src="img/sample_03.jpg" alt="サンプル写真" title="トップ写真" class="top_img"> -->
@@ -204,6 +205,10 @@
       <section id ="Movie" class="content">
         <h2 id="fourth" class="section_title">Movie</h2>
         <h4>Coming soon....</h4>
+      </section>
+      <section id ="Detail" class="content">
+        <h2 id="sixth" class="section_title">Detail</h2>
+        <a href =result.html>詳しい活動内容はこちらをクリック！！</a>
       </section>
       <!--誰が作ったかとかの著作権を表示するとこ-->
     </div>
