--- a/public_html/result.html
+++ b/public_html/result.html
@@ -41,18 +41,55 @@
   <h2>MediaPipe</h2>
   #Mediapipeの参考サイトを載せる#
   <br>
+  <br>
+  <br>
   <h2>JetsonNano</h2>
-  #JetonNanoの参考サイトを載せる#
-  <br>
-  <br>
+  #JetsonNanoの参考サイトを載せる#
   <br>
   <br>
   <a>こちらは分野ごとに私たちが実際に行った動画や実際に使用したpythonコード、手順の詳細などが記載されています。</a>
   <br>
   <br>
 #それぞれの成果を載せていく#
-
+  <h2>井上</h2>
+  <a href="#modal-01">
+    <img src="./img/jetsonnano.jpg" class="gazou">
+  <div class="modal-wrapper" id="modal-01">
+    <a href="#!" class="modal-overlay"></a>
+    <div class="modal-window">
+      <div class="modal-content">
+        <h4>Jetsonnano</h4>
+        <img src="./img/jetsonnano.jpg" class="gazou2">
+        <p>
+          井上くんのJetsonの説明
+        </p>
+        <button onclick="location.href='https://github.com/shodai-inoue/ogatapro2021'" type="button">Code</button>
+        <button onclick="location.href='https://www.youtube.com/watch?v=paPXfGOhqfo'" type="button">Video</button>
+        <button onclick="location.href=''" type="button">Detail</button>
+      </div>
+      <a href="#!" class="modal-close">×</a>
+    </div>
+  </div>
   <br>
+  <br>
+  <h2>武田</h2>
+  <a href="#modal-02">
+    <img src="./img/takeda.jpg" class="gazou">
+  <div class="modal-wrapper" id="modal-02">
+    <a href="#!" class="modal-overlay"></a>
+    <div class="modal-window">
+      <div class="modal-content">
+        <h4>Jetsonnano</h4>
+        <img src="./img/takeda.jpg" class="gazou2">
+        <p>
+          武田くんのJetsonの説明
+        </p>
+        <button onclick="location.href='https://github.com/shodai-inoue/ogatapro2021'" type="button">Code</button>
+        <button onclick="location.href='https://www.youtube.com/watch?v=paPXfGOhqfo'" type="button">Video</button>
+      </div>
+      <a href="#!" class="modal-close">×</a>
+    </div>
+  </div>
   <br>
   <br>
   <a href ="index.html">ホームページに戻る</a>
