--- a/public_html/result.html
+++ b/public_html/result.html
@@ -1,106 +1,214 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <!--スマホとPCで正しく表示される用、スマホはどうなるか未確認-->
-  <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-  <title>尾形プロジェクト2021_コードまとめ</title>
-  <link rel="stylesheet" type="text/css" href="css/result.css">
+  <head>
+    <meta charset="UTF-8">
+    <!--スマホとPCで正しく表示される用、スマホはどうなるか未確認-->
+    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+    <title>尾形プロジェクト2021_コードまとめ</title>
+    <link rel="stylesheet" type="text/css" href="css/result.css">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+    <!--メニューのところのフォントのデータ-->
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+    <!--titleのところのフォントのデータ-->
   </head>
-<body>
-  <div id="wrapper">
-    <header class="sitemenu">
-      <div class="back_to_top">
-        <a class="back_to_top" href="#"></a>
-        <h1 class="title">
-          <span>尾</span>
-          <span>形</span>
-          <span>プ</span>
-          <span>ロ</span>
-          <span>ジ</span>
-          <span>ェ</span>
-          <span>ク</span>
-          <span>ト</span>
-          <span>&nbsp;</span>
-          <span>2</span>
-          <span>0</span>
-          <span>2</span>
-          <span>1</span>
-        </h1>
-      </div>
-  <h1>尾形プロジェクト最終結果報告</h1>
-  <a>ここには私たちが1年間を通して行ってきた活動結果を掲示しております。</a>
-  <br>
-  <a>まずは私たちが使用したツールを紹介したいと思います。</a>
-  <h2>OpenPose</h2>
-  #OpenPoseの参考サイトを載せる#
-  <br>
-  <h2>Yolo</h2>
-  #Yoloの参考サイトを載せる#
-  <br>
-  <h2>MediaPipe</h2>
-  #Mediapipeの参考サイトを載せる#
-  <br>
-  <br>
-  <br>
-  <h2>JetsonNano</h2>
-  #JetsonNanoの参考サイトを載せる#
-  <br>
-  <br>
-  <a>こちらは分野ごとに私たちが実際に行った動画や実際に使用したpythonコード、手順の詳細などが記載されています。</a>
-  <br>
-  <br>
-#それぞれの成果を載せていく#
-  <h2>井上</h2>
-  <a href="#modal-01">
-    <img src="./img/jetsonnano.jpg" class="gazou">
-  <div class="modal-wrapper" id="modal-01">
-    <a href="#!" class="modal-overlay"></a>
-    <div class="modal-window">
-      <div class="modal-content">
-        <h4>Jetsonnano</h4>
-        <img src="./img/jetsonnano.jpg" class="gazou2">
-        <p>
-          井上くんのJetsonの説明
-        </p>
-        <button onclick="location.href='https://github.com/shodai-inoue/ogatapro2021'" type="button">Code</button>
-        <button onclick="location.href='https://www.youtube.com/watch?v=paPXfGOhqfo'" type="button">Video</button>
-        <button onclick="location.href=''" type="button">Detail</button>
-      </div>
-      <a href="#!" class="modal-close">×</a>
+  <body>
+    <div id="wrapper">
+      <header class="sitemenu">
+        <div class="back_to_top">
+          <a class="back_to_top" href="#"></a>
+          <h1 class="title">
+            <span>尾</span>
+            <span>形</span>
+            <span>プ</span>
+            <span>ロ</span>
+            <span>ジ</span>
+            <span>ェ</span>
+            <span>ク</span>
+            <span>ト</span>
+            <span>&nbsp;</span>
+            <span>2</span>
+            <span>0</span>
+            <span>2</span>
+            <span>1</span>
+          </h1>
+        </div>
+      </header>
     </div>
-  </div>
-  <br>
-  <br>
-  <h2>武田</h2>
-  <a href="#modal-02">
-    <img src="./img/takeda.jpg" class="gazou">
-  <div class="modal-wrapper" id="modal-02">
-    <a href="#!" class="modal-overlay"></a>
-    <div class="modal-window">
-      <div class="modal-content">
-        <h4>Jetsonnano</h4>
-        <img src="./img/takeda.jpg" class="gazou2">
-        <p>
-          武田くんのJetsonの説明
-        </p>
-        <button onclick="location.href='https://github.com/shodai-inoue/ogatapro2021'" type="button">Code</button>
-        <button onclick="location.href='https://www.youtube.com/watch?v=paPXfGOhqfo'" type="button">Video</button>
-      </div>
-      <a href="#!" class="modal-close">×</a>
-    </div>
-  </div>
-  <br>
-  <br>
-  <a href ="index.html">ホームページに戻る</a>
-  <br>
-  <br>
-  <br>
-  <footer>
-    <p>
-      @Ogata Project 2021<br>
-      専修大学ネットワーク情報学部
-    </p>
-  </footer>
+    <h1>#それぞれの成果を載せていく#</h1>
+    <ul>
+        <a href="#modal-01">
+          <div class="example">
+            <img src="./img/inoue.jpeg" class="gazou">
+            <p>Jetsonnano</p>	
+          </div>
+        <div class="modal-wrapper" id="modal-01">
+          <a href="#!" class="modal-overlay"></a>
+          <div class="modal-window">
+            <div class="modal-content">
+              <h4>Jetsonnano</h4>
+              <img src="./img/jetsonnano.jpg" class="gazou2">
+              <p>
+                井上くんのJetsonの説明
+              </p>
+              <button onclick="location.href='https://github.com/shodai-inoue/ogatapro2021'" type="button">Code</button>
+              <button onclick="location.href='https://www.youtube.com/watch?v=paPXfGOhqfo'" type="button">Video</button>
+              <button onclick="location.href=''" type="button">Detail</button>
+            </div>
+            <a href="#!" class="modal-close">×</a>
+          </div>
+        </div>
+        <br>
+        <br>
+        <a href="#modal-02">
+          <div class="example">
+            <img src="./img/takeda.jpg" class="gazou">
+            <p>Web会議ツール</p>	
+          </div>
+        <div class="modal-wrapper" id="modal-02">
+          <a href="#!" class="modal-overlay"></a>
+          <div class="modal-window">
+            <div class="modal-content">
+              <h4>web会議ツール</h4>
+              <img src="./img/takeda.jpg" class="gazou2">
+              <p>
+                武田くんのweb会議ツールの説明
+              </p>
+              <button onclick="location.href='https://github.com/shodai-inoue/ogatapro2021'" type="button">Code</button>
+              <button onclick="location.href='https://www.youtube.com/watch?v=paPXfGOhqfo'" type="button">Video</button>
+              <button onclick="location.href=''" type="button">Detail</button>
+            </div>
+            <a href="#!" class="modal-close">×</a>
+          </div>
+        </div>
+        <br>
+        <br>
+        <a href="#modal-03">
+          <div class="example">
+            <img src="./img/yusa.jpg" class="gazou">
+            <p>touch less</p>	
+          </div>
+        <div class="modal-wrapper" id="modal-03">
+          <a href="#!" class="modal-overlay"></a>
+          <div class="modal-window">
+            <div class="modal-content">
+              <h4>touch less</h4>
+              <img src="./img/yusa.jpg" class="gazou2">
+              <p>
+                武田くんのtouch lessの説明
+              </p>
+              <button onclick="location.href='https://github.com/shodai-inoue/ogatapro2021'" type="button">Code</button>
+              <button onclick="location.href='https://www.youtube.com/watch?v=paPXfGOhqfo'" type="button">Video</button>
+              <button onclick="location.href=''" type="button">Detail</button>
+            </div>
+            <a href="#!" class="modal-close">×</a>
+          </div>
+        </div>
+        <br>
+        <br>
+        <a href="#modal-04">
+          <div class="example">
+            <img src="./img/kamei.jpg" class="gazou">
+            <p>walking</p>	
+          </div>
+        <div class="modal-wrapper" id="modal-04">
+          <a href="#!" class="modal-overlay"></a>
+          <div class="modal-window">
+            <div class="modal-content">
+              <h4>歩行</h4>
+              <img src="./img/kamei.jpg" class="gazou2">
+              <p>
+                武田くんの歩行の説明
+              </p>
+              <button onclick="location.href='https://github.com/shodai-inoue/ogatapro2021'" type="button">Code</button>
+              <button onclick="location.href='https://www.youtube.com/watch?v=paPXfGOhqfo'" type="button">Video</button>
+              <button onclick="location.href=''" type="button">Detail</button>
+            </div>
+            <a href="#!" class="modal-close">×</a>
+          </div>
+        </div>
+        <br>
+        <br>
+        <a href="#modal-05">
+          <div class="example">
+            <img src="./img/sano.jpg" class="gazou">
+            <p>baseball</p>	
+          </div>
+        <div class="modal-wrapper" id="modal-05">
+          <a href="#!" class="modal-overlay"></a>
+          <div class="modal-window">
+            <div class="modal-content">
+              <h4>野球</h4>
+              <img src="./img/sano.jpg" class="gazou2">
+              <p>
+                武田くんの野球の説明
+              </p>
+              <button onclick="location.href='https://github.com/shodai-inoue/ogatapro2021'" type="button">Code</button>
+              <button onclick="location.href='https://www.youtube.com/watch?v=paPXfGOhqfo'" type="button">Video</button>
+              <button onclick="location.href=''" type="button">Detail</button>
+            </div>
+            <a href="#!" class="modal-close">×</a>
+          </div>
+        </div>
+        <br>
+        <br>
+        <a href="#modal-06">
+          <div class="example">
+            <img src="./img/kikuchi.JPG" class="gazou">
+            <p>basketball</p>	
+          </div>
+        <div class="modal-wrapper" id="modal-06">
+          <a href="#!" class="modal-overlay"></a>
+          <div class="modal-window">
+            <div class="modal-content">
+              <h4>バスケ</h4>
+              <img src="./img/miyazaki.JPG" class="gazou2">
+              <p>
+                武田くんのバスケの説明
+              </p>
+              <button onclick="location.href='https://github.com/shodai-inoue/ogatapro2021'" type="button">Code</button>
+              <button onclick="location.href='https://www.youtube.com/watch?v=paPXfGOhqfo'" type="button">Video</button>
+              <button onclick="location.href=''" type="button">Detail</button>
+            </div>
+            <a href="#!" class="modal-close">×</a>
+          </div>
+        </div>
+        <br>
+        <br>
+        <a href="#modal-07">
+          <div class="example">
+            <img src="./img/豚.png" class="gazou">
+            <p>soccer</p>	
+          </div>
+        <div class="modal-wrapper" id="modal-07">
+          <a href="#!" class="modal-overlay"></a>
+          <div class="modal-window">
+            <div class="modal-content">
+              <h4>サッカー</h4>
+              <img src="./img/murakami.jpg" class="gazou2">
+              <p>
+                武田くんのサッカーの説明
+              </p>
+              <button onclick="location.href='https://github.com/shodai-inoue/ogatapro2021'" type="button">Code</button>
+              <button onclick="location.href='https://www.youtube.com/watch?v=paPXfGOhqfo'" type="button">Video</button>
+              <button onclick="location.href=''" type="button">Detail</button>
+            </div>
+            <a href="#!" class="modal-close">×</a>
+          </div>
+        </div>
+        <br>
+        <br>
+    </ul>
+    <a href ="index.html">ホームページに戻る</a>
+    <br>
+    <br>
+    <br>
+    <footer>
+      <p>
+        @Ogata Project 2021<br>
+        専修大学ネットワーク情報学部
+      </p>
+    </footer>
+    <script type="text/javascript" src="javascript/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="javascript/sitemenu.js"></script>
   </body>
 </html>
