--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,9 +12,9 @@
   <!--titleのところのフォントのデータ-->
   </head>
   <body>
-    <div class="start">
+    <!-- <div class="start">
       <p><img src="./img/Logo.jpg"></p>
-    </div>
+    </div> -->
     <div id="contents">
       <div class="top_img"></div>
     </div>
